--- a/compose.yaml
+++ b/compose.yaml
@@ -14,7 +14,7 @@ x-airflow-common:
     - ./dag:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./plugins:/opt/airflow/plugins
-  user: "5000"
+  user: "${AIRFLOW_UID}:0"
   depends_on:
     &airflow-common-depends-on
     redis:
